--- a/BrowserClients/css/style.css
+++ b/BrowserClients/css/style.css
@@ -94,3 +94,24 @@ body:before {
 #autorisation div {
     margin-top: 100px;
 }
+
+#control-panel {
+    background: #3F51B5;
+    width: 100%;
+    height: 50px;
+    padding: 5px;
+    margin: -20px 0 30px 0;
+    border: 1px solid #673AB7;
+    border-radius: 3px;
+}
+.control-button {
+    display: inline-block;
+    vertical-align: middle;
+    cursor: pointer;
+    padding: 15px 20px;
+    border: 1px solid;
+    background: #fff;
+}
+#control-tabs {
+   float: right;
+}
